# otus-allocator

./: CMakeLists.txt  README.md
.github/workflows/: release.yaml
src/: CMakeLists.txt  allocator.h  list.h  main.cpp
test/: CMakeLists.txt
